--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 <title>Buy CC online CVV - Transfer WU PP - Hack Carding Tutorials</title>
 <meta name="description"
-	content="Cvv price starting from 2$, money transfer in 3 - 5 minutes, many new tutorials for carder to make huge amount of money Buy cc online Now!" />
+	content="Cvv price starting from 2$, money transfer in 3 - 5 minutes, many  tutorials for carder to make huge amount of money Buy cc online Now!" />
 <link rel="canonical" href="index.html" />
 <meta property="og:locale" content="en_US" />
 <meta property="og:type" content="website" />
